2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiler.m (-exceptionInfo): Return exceptionInfo dictionary.

    * STCompiler.m (-compileMethodFromSource:forReceiver:, -compileString:,
    -indexOfNamedReference:): Remove unneeded variables reported by gcc 4.6.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBytecodes.h (-data, -length): Declare public methods.
    * STMethodContext.h: Remove declaration of unused methods, which were
    not implemented.

    * STCompiler.h (STCompiler, -compiledMethodFromSource:forReceiver:):
    * STCompiler.m (-compiledMethodFromSource:forReceiver:): STCompiler
    expects its receiver attribute to be a STScriptObject not just an
    object that satisfies the weaker STScriptObject protocol.

    * STSmalltalkScriptObject.m: Import NSDictionary and NSKeyValueCoding,
    whose methods are used in the implementation.

    * STCompiledMethod.h: Import definition of STMethod protocol instead
    of just declaring it. Gcc 4.6 complains if a protocol whose definition
    is not visible is used in an interface declaration.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBytecodeInterpreter.m: Remove unnecessary include of Objective-C
    runtime header.

2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * SmalltalkInfo.plist: Add missing semicolons at end of plist
    dictionaries.

2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STSourceReader.m (-readNextToken): Fix bug where an incorrect token
    range was set for a string token that ends at the end of the input
    string.

2005 Aug 17 Stefan Urbanek

    * NSObject+additions: new file, new method ifNil:block
    
2005 June 24 Stefan Urbanek

    * STCompiler: Fixed STUndefinedKeyException name as it was fixed in -base
    
2005 June 20 Stefan Urbanek

    * Rewritten parts of STCompiler, STBytecodeInterpreter, STCompiled* and '
    ST*Context: Smalltalk now refers to instance variables by name not by index.